// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectRecipient should render disabled 1`] = `
<div>
  <div>
    <div
      class="relative flex w-full items-center text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="sr-only css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="css-n29l73"
                disabled=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                  />
                </div>
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    autocomplete="off"
                    class="no-ligatures w-full border-none cursor-default text-theme-secondary-text css-1nupw50"
                    data-testid="SelectDropdown__input"
                    disabled=""
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render empty 1`] = `
<div>
  <div>
    <div
      class="relative flex w-full items-center text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="sr-only css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="css-1psxlcd"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                  />
                </div>
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    autocomplete="off"
                    class="no-ligatures w-full border-none cursor-default css-1nupw50"
                    data-testid="SelectDropdown__input"
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center cursor-pointer"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render invalid 1`] = `
<div>
  <div>
    <div
      class="relative flex w-full items-center text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="sr-only css-px3dod"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              aria-invalid="true"
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
            data-testid="Input__addon-end"
          >
            <span
              data-testid="Input__error"
            >
              <div
                class="text-theme-danger-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  circle-exclamation-mark.svg
                </svg>
              </div>
            </span>
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="css-px3dod"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                  />
                </div>
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-invalid="true"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    autocomplete="off"
                    class="no-ligatures w-full border-none cursor-default css-1nupw50"
                    data-testid="SelectDropdown__input"
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                  data-testid="Input__addon-end"
                >
                  <span
                    data-testid="Input__error"
                  >
                    <div
                      class="text-theme-danger-500 css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg>
                        circle-exclamation-mark.svg
                      </svg>
                    </div>
                  </span>
                  <div
                    class="pl-3"
                  >
                    <div
                      class="flex items-center cursor-pointer"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should update internal state when prop changes 1`] = `
<div>
  <div>
    <div
      class="relative flex w-full items-center text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="sr-only css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="css-1psxlcd"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="shrink-0 css-8zckym"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                    >
                      <img
                        alt="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                        title="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    autocomplete="off"
                    class="no-ligatures w-full border-none css-1nupw50"
                    data-testid="SelectDropdown__input"
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center cursor-pointer"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
